fix: set icon inset to 0 and add `important` to `test-align` for table-caption

--- a/packages/components-css/side-nav/index.scss
+++ b/packages/components-css/side-nav/index.scss
@@ -14,10 +14,11 @@
     padding-inline: 0;
   }
   &__link {
+    align-items: center;
     color: var(--rhc-sidenav-link-color);
     column-gap: var(--rhc-sidenav-link-column-gap);
     display: flex;
-    font-family: var(--rhc-sidenav-link-font-family);
+    font-family: var(--rhc-sidenav-link-font-family), sans-serif;
     font-size: var(--rhc-sidenav-link-font-size);
     font-weight: var(--rhc-sidenav-link-font-weight);
     line-height: var(--rhc-sidenav-link-line-height);
